fix(autolinkheader): no hover icon on mobile

--- a/packages/gatsby-theme-carbon/src/components/AutolinkHeader/AutolinkHeader.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/AutolinkHeader/AutolinkHeader.module.scss
@@ -19,8 +19,10 @@
   }
 }
 
-.header:hover {
-  .anchor {
-    opacity: 1;
+@include carbon--breakpoint('md') {
+  .header:hover {
+    .anchor {
+      opacity: 1;
+    }
   }
 }
